# craytray

./: .gitignore  CMakeLists.txt
include/: aabb.h  bvh_node.h  camera.h  color.h  hittable.h  hittable_list.h  material.h  model.h  ray.h  rt_stb_image.h  rt_tiny_obj.h  rtweekend.h  sphere.h  texture.h  translate.h  triangle.h  vec3.h
src/: camera.cpp  hittable_list.cpp  main.cpp  material.cpp  sphere.cpp  tiny_obj_impl.cpp
